# Backend-Test

./: .env  README.md  exceptions.py  public.sql  pyproject.toml
api/: app.py  config.py
api/depends/: admin.py
api/routers/: admin.py  user.py
core/: db.py
crud/: admin.py  user.py
facades/: admin.py  user.py
helpers/: authentication.py  token_maker.py
migration/: create_admin.py  create_table.py
models/: __init__.py  admin.py  user.py
schemas/: admin.py  user.py
